--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -79,12 +79,13 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="DOB" class="control-label">Date of Birth</label>
+                    <label for="password" class="control-label">password</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="DOB" id="date_of_birth" placeholder="mm/dd/yyyy" />
+                        <input type="text" class="form-control" name="password" id="password" placeholder="password" />
                     </div>
                 </div>
+        
                 <button type="submit" id='submit' class="btn btn-primary">Submit</button>
 
 
