--- a/public/chart.html
+++ b/public/chart.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <title>Charts on Charts</title>
 </head>
 <body>
     <div class="ct-chart ct-perfect-fourth" id="my-chart"></div>
 
-<script src ="../public/chart.js"></script>
+<script src ="../public/javascript/chart.js"></script>
+
 </body>
 </html>
