view.html wireframe

--- a/public/view.html
+++ b/public/view.html
@@ -32,7 +32,90 @@
   </header>
 
   <main class="container">
-
+    <form action="" method="">
+      <div class="form-group mb-4">
+        <label for="categorySelect">
+          <h3>Category</h3>
+        </label>
+        <select class="form-control" id="categorySelect">
+          <option>Crossfit</option>
+          <option>Hike</option>
+          <option>Ride</option>
+          <option>Run</option>
+          <option>Swim</option>
+        </select>
+      </div>
+    </form>
+    <div class="row">
+      <div class="col" id="crossfit">
+        <h3>Crossfit</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="crossfitTime"></span></li>
+          <li class="list-group-item">RPE:<span id="crossfitRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="crossfitHR"></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" id="hike">
+        <h3>Hike</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="hikeTime"></span></li>
+          <li class="list-group-item">Distance:<span id="hikeDistance"></span></li>
+          <li class="list-group-item">Pace:<span id="hikePace"></span></li>
+          <li class="list-group-item">RPE:<span id="hikeRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="hikeHR"></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" id="ride">
+        <h3>Ride</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="rideTime"></span></li>
+          <li class="list-group-item">Distance:<span id="rideDistance"></span></li>
+          <li class="list-group-item">Pace:<span id="ridePace"></span></li>
+          <li class="list-group-item">RPE:<span id="rideRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="rideHR"></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" id="run">
+        <h3>Run</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="runTime"></span></li>
+          <li class="list-group-item">Distance:<span id="runDistance"></span></li>
+          <li class="list-group-item">Pace:<span id="runPace"></span></li>
+          <li class="list-group-item">RPE:<span id="runRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="runHR"></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" id="swim">
+        <h3>Swim</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="swimTime"></span></li>
+          <li class="list-group-item">Distance:<span id="swimDistance"></span></li>
+          <li class="list-group-item">Pace:<span id="swimPace"></span></li>
+          <li class="list-group-item">RPE:<span id="swimRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="swimHR"></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" id="walk">
+        <h3>Walk</h3>
+        <ul class="list-group mb-4">
+          <li class="list-group-item">Time:<span id="walkTime"></span></li>
+          <li class="list-group-item">Distance:<span id="walkDistance"></span></li>
+          <li class="list-group-item">Pace:<span id="walkPace"></span></li>
+          <li class="list-group-item">RPE:<span id="walkRPE"></span></li>
+          <li class="list-group-item">Heart Rate:<span id="walkHR"></span></li>
+        </ul>
+      </div>
+    </div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
