--- a/public/chart.html
+++ b/public/chart.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src ="javascript/chart.js"></script>
     <title>Charts on Charts</title>
 </head>
 <body>
     <div class="ct-chart ct-perfect-fourth" id="my-chart"></div>
-
-<script src ="../public/javascript/chart.js"></script>
 
 </body>
 </html>
