download data, create stress/fitness, upload to chart

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src ="javascript/chart.js"></script>
+    <script src ="javascript/fitness.js"></script>
 </head>
 
 <body>
