--- a/public/chart.html
+++ b/public/chart.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src ="javascript/chart.js"></script>
+    <script src ="javascript/fitness.js"></script>
     <title>Charts on Charts</title>
 </head>
 <body>
