--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,28 +8,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src ="javascript/fitness.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="javascript/fitness.js"></script>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-      <a class="navbar-brand" href="/index.html">Logo</a>
+      <a class="navbar-brand" href="/">Logo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/log.html">Log a Workout</a>
-          <a class="nav-item nav-link" href="/view.html">View Workouts</a>
-          <a class="nav-item nav-link" href="/sync.html">Sync</a>
+          <a class="nav-item nav-link" href="/log">Log a Workout</a>
+          <a class="nav-item nav-link" href="/view">View Workouts</a>
+          <a class="nav-item nav-link" href="/sync">Sync</a>
         </div>
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/settings.html">Settings</a>
+          <a class="nav-item nav-link" href="/settings">Settings</a>
         </div>
       </div>
     </nav>
@@ -58,7 +58,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-    
+
 </body>
 
 </html>
