--- a/public/log.html
+++ b/public/log.html
@@ -1,15 +1,106 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
+    <title>LAW</title>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh3IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-  <p>log a workout</p>
+
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Log a workout</h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 offset -md-2">
+            <div class="law-container">
+                <table class="table table-striped">
+
+                    <thead>
+                    </thead>
+
+                    <tbody>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> category</h2>
+                                <select id="category" type="text">
+                                    <option>Crossfit</option>
+                                    <option>Hike</option>
+                                    <option>Ride</option>
+                                    <option>Run</option>
+                                    <option>Swim</option>
+                                    <option>Walk</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> Date </h2>
+                                <input type="text" class="form-control" id="date" placeholder="input date">
+                            </td>
+                        </tr>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> workout length </h2>
+                                <input type="text" class="form-control input-sm" id="workOut_length" placeholder="Enter time(minutes?)">
+                            </td>
+                        </tr>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> distance </h2>
+                                <input type="text" class="form-control" id="distance" placeholder="Input approximate number in the metric system">
+                            </td>
+                        </tr>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> pace </h2>
+                                <input type="text" class="form-control" id="pace" placeholder="input pace">
+                            </td>
+                        </tr>
+                        <tr class="form-row">
+                            <td colspan="4">
+                                <h2> RPE </h2>
+                                <input type="text" class="form-control" id="rpe" placeholder="input pace">
+                            </td>
+                        </tr>
+                        <td>
+                            <button class = "button" id="btn">LOG</button>
+                            <a href ="view.html" class = "button">Finished with LOG</a>
+                        </td>
+                      
+
+
+
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <script src="javascript/law.js" type="text/javascript"></script>
+
 </body>
+
+
 
 </html>
