--- a/public/html/login.html
+++ b/public/html/login.html
@@ -15,7 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-    <script src='../javascript/signup.js'></script>
+    <script src='../javascript/login.js'></script>
 
 </head>
 
@@ -48,27 +48,11 @@
 
     <div class='container-fluid' style='width:100%'>
         <div class='row justify-content-center' style='padding: 100px 0 0 0; background-color: rgb(33, 83, 116)'>
-            <h2 style='color:white; padding: 25px 0 '>Sign Up</h2>
+            <h2 style='color:white; padding: 25px 0 '>Login</h2>
         </div>
         <div class='row justify-content-center'>
 
             <form class="" method="post" action="#" style='width:50%'>
-                <div class="form-group">
-                    <label for="first_name" class="control-label">First Name</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="first_name" id="first_name" placeholder="First Name" />
-                    </div>
-                </div>
-                <div class='form-group'>
-
-                    <label for="last_name" class="control-label">Last Name</label>
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Last Name" />
-                    </div>
-                </div>
-
                 <div class="form-group">
                     <label for="email" class="control-label">Email</label>
                     <div class="input-group">
