--- a/public/html/test.html
+++ b/public/html/test.html
@@ -20,26 +20,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" style='background-color: white'>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top"  style='background-color: white'>
         <div class='container'>
-            <a class="navbar-brand" href="#" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
+            <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto" >
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style='color:rgb(33, 83, 116)'>Explore</a>
+                        <a class="nav-link" href="#explore" style='color:rgb(33, 83, 116)'>Explore</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style='color:rgb(33, 83, 116)'>Login</a>
+                        <a class="nav-link" href="/login" style='color:rgb(33, 83, 116)'>Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style='color:rgb(33, 83, 116)'>Sign Up</a>
+                        <a class="nav-link" href="/signup" style='color:rgb(33, 83, 116)'>Sign Up</a>
                     </li>
 
                 </ul>
@@ -49,8 +49,9 @@
 
 
     <div class='container'style='margin-top:100px'>
-
-        <button class= 'btn-primary' id = 'sync'>Sync</button>
+        <h3>Sync with the apps you currently use!</h3>
+        <img style ='width:100px;height:auto' src='http://www.userlogos.org/files/logos/Deva/strava1.png'>
+        <button class= 'btn-primary' id = 'sync' style = 'border-radius:5px'>Sync</button>
        </div>
 
 
