toggle chart timeframe, connected to front end

--- a/public/html/chart.html
+++ b/public/html/chart.html
@@ -11,7 +11,13 @@
     <title>Charts on Charts</title>
 </head>
 <body>
-    <div class="ct-chart ct-perfect-fourth" id="my-chart"></div>
 
+    <select id="chart-timeframe">
+            <option class="time-option" value = "one-month">One Month</option>
+            <option class="time-option" value = "three-months" selected = "selected">Three Months</option>
+            <option class="time-option" value = "six-months">Six Months</option>
+            <option class="time-option" value = "one-year">One Year</option>
+    </select>
+    <div class="ct-chart ct-perfect-fourth" id="my-chart"></div>
 </body>
 </html>
