--- a/public/html/index.html
+++ b/public/html/index.html
@@ -37,6 +37,12 @@
 
   <main class="container">
     <div class="row">
+      <select id="chart-timeframe">
+        <option value = "one-month">One Month</option>
+        <option value = "three-months" selected = "selected">Three Months</option>
+        <option value = "six-months">Six Months</option>
+        <option value = "one-year">One Year</option>
+      </select>
       <div class="col-md-12 col-lg-9 text-center">
         <div class="ct-chart" id="my-chart"></div>
       </div>
