logic for fitness and stress indicators

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -47,13 +47,13 @@
         <div class="ct-chart" id="my-chart"></div>
       </div>
       <div class="col-md-12 col-lg-3 text-center d-flex flex-column justify-content-around">
-        <h3 class="display-4 mt-3 mt-lg-5" style="color: red">Fitness</h3>
-        <h3 class="display-4 mb-3 mb-lg-5" style="color: red">Stress</h3>
+        <h3 class="display-4 mt-3 mt-lg-5" id="fitness-indicator" style="color: red">Fitness</h3>
+        <h3 class="display-4 mb-3 mb-lg-5" id="stress-indicator" style="color: red">Stress</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12 col-lg-9 mt-lg-5">
-        <h2 class="display-3 text-center">You Need To Rest</h2>
+        <h2 class="display-3 text-center" id="recommendation">You Need To Rest</h2>
       </div>
     </div>
   </main>
