--- a/public/html/log.html
+++ b/public/html/log.html
@@ -55,31 +55,31 @@
                         <tr class="form-row">
                             <td colspan="4">
                                 <h2> Date </h2>
-                                <input type="text" class="form-control" id="date" placeholder="input date">
+                                <input type="date" class="form-control" id="date" placeholder="input date">
                             </td>
                         </tr>
                         <tr class="form-row">
                             <td colspan="4">
-                                <h2> workout length </h2>
-                                <input type="text" class="form-control input-sm" id="workOut_length" placeholder="Enter time(minutes?)">
+                                <h2> Workout Length </h2>
+                                <input type="text" class="form-control input-sm" id="workOut_length" placeholder="MMM:SS">
                             </td>
                         </tr>
                         <tr class="form-row">
                             <td colspan="4">
-                                <h2> distance </h2>
-                                <input type="text" class="form-control" id="distance" placeholder="Input approximate number in the metric system">
+                                <h2> Distance </h2>
+                                <input type="number" class="form-control" id="distance" placeholder="Input approximate number in the metric system">
                             </td>
                         </tr>
                         <tr class="form-row">
                             <td colspan="4">
-                                <h2> pace </h2>
-                                <input type="text" class="form-control" id="pace" placeholder="input pace">
+                                <h2> Pace </h2>
+                                <input type="text" class="form-control" id="pace" placeholder="MM:SS / Km">
                             </td>
                         </tr>
                         <tr class="form-row">
                             <td colspan="4">
-                                <h2> RPE </h2>
-                                <input type="text" class="form-control" id="rpe" placeholder="input pace">
+                                <h2> Rate of Perceived Exertion </h2>
+                                <input type="Number" class="form-control" id="rpe" placeholder=" 1-10">
                             </td>
                         </tr>
                         <td>
