--- a/public/html/index.html
+++ b/public/html/index.html
@@ -17,9 +17,11 @@
 </head>
 
 <body>
+
+   
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-      <a class="navbar-brand" href="/">Logo</a>
+      <a class="navbar-brand" href="/homepage">Logo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
