--- a/public/html/sync.html
+++ b/public/html/sync.html
@@ -1,15 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+    <script src='../javascript/test.js'></script>
+    <style>
+        body {
+            background-color: whitesmoke
+        }
+    </style>
+
 </head>
 
 <body>
-  <p>sync</p>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" style='background-color: white'>
+        <div class='container'>
+            <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#explore" style='color:rgb(33, 83, 116)'>Explore</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login" style='color:rgb(33, 83, 116)'>Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup" style='color:rgb(33, 83, 116)'>Sign Up</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class='container' style='margin-top:100px; padding: 0 100px'>
+        <div class='row  justify-content-center text-center'>
+            <h3 style='color:rgb(33, 83, 116)'>Sync with the apps you currently use!</h3>
+        </div>
+            <div class='row '>
+            <img style='width:100px;height:70px' src='http://www.userlogos.org/files/logos/Deva/strava1.png'>
+            <button class='btn-primary' id='sync' style='border-radius:5px; margin: 15px 0'>Sync</button>
+        </div>
+    </div>
+
+
+
+
 </body>
 
 </html>
