--- a/public/html/log.html
+++ b/public/html/log.html
@@ -20,84 +20,105 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh3IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
+
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+            <a class="navbar-brand" href="/">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="/log">Log a Workout</a>
+                    <a class="nav-item nav-link" href="/view">View Workouts</a>
+                    <a class="nav-item nav-link" href="/sync">Sync</a>
+                </div>
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="/settings">Settings</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Log a workout</h1>
+    <div class='container-fluid'>
+        <div class='row justify-content-center' style='padding: 50px 0 0 0; background-color: rgb(33, 83, 116)'>
+            <h2 style='color:white'>Log a Workout</h2>
         </div>
-    </div>
+        <div class='row justify-content-center'>
 
-    <div class="row">
-        <div class="col-md-6 offset -md-2">
-            <div class="law-container">
-                <table class="table table-striped">
+            <div class="row">
+                <div class="col-md-12 offset">
+                    <div class="lawContainer">
+                        <table class="table table-striped">
 
-                    <thead>
-                    </thead>
+                            <thead>
+                            </thead>
 
-                    <tbody>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> category</h2>
-                                <select id="category" type="text">
-                                    <option>Crossfit</option>
-                                    <option>Hike</option>
-                                    <option>Ride</option>
-                                    <option>Run</option>
-                                    <option>Swim</option>
-                                    <option>Walk</option>
-                                </select>
-                            </td>
-                        </tr>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> Date </h2>
-                                <input type="text" class="form-control" id="date" placeholder="input date">
-                            </td>
-                        </tr>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> workout length </h2>
-                                <input type="text" class="form-control input-sm" id="workOut_length" placeholder="Enter time(minutes?)">
-                            </td>
-                        </tr>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> distance </h2>
-                                <input type="text" class="form-control" id="distance" placeholder="Input approximate number in the metric system">
-                            </td>
-                        </tr>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> pace </h2>
-                                <input type="text" class="form-control" id="pace" placeholder="input pace">
-                            </td>
-                        </tr>
-                        <tr class="form-row">
-                            <td colspan="4">
-                                <h2> RPE </h2>
-                                <input type="text" class="form-control" id="rpe" placeholder="input pace">
-                            </td>
-                        </tr>
-                        <td>
-                            <button class = "button" id="btn">LOG</button>
-                            <a href ="view.html" class = "button">Finished with LOG</a>
-                        </td>
-                      
-
+                            <tbody>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> category</h2>
+                                        <select id="category" type="text">
+                                            <option>Crossfit</option>
+                                            <option>Hike</option>
+                                            <option>Ride</option>
+                                            <option>Run</option>
+                                            <option>Swim</option>
+                                            <option>Walk</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> date </h2>
+                                        <input type="date" class="formControl" id="date">
+                                    </td>
+                                </tr>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> workout length </h2>
+                                        <input type="text" class="formControl input-sm" id="workOut_length" placeholder="Enter time (00:00:00)">
+                                    </td>
+                                </tr>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> distance </h2>
+                                        <input type="text" class="formControl" id="distance" placeholder="Input distance">
+                                    </td>
+                                </tr>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> pace </h2>
+                                        <input type="text" class="formControl" id="pace" placeholder="input pace">
+                                    </td>
+                                </tr>
+                                <tr class="bodyRow">
+                                    <td colspan="4">
+                                        <h2> RPE </h2>
+                                        <input type="text" class="formControl" id="rpe" placeholder="input RPE (1 - 10)">
+                                    </td>
+                                </tr>
+                                <td>
+                                    <button class="btn btn-primary" id="btn">LOG</button>
+                                    <a href="view" class="btn btn-primary">Finished with LOG</a>
+                                </td>
 
 
-                    </tbody>
 
-                </table>
+
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script src="javascript/law.js" type="text/javascript"></script>
+        <script src="javascript/law.js" type="text/javascript"></script>
 
 </body>
 
