--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+  <link rel="stylesheet" href="css/chart.css">
   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="javascript/fitness.js"></script>
@@ -47,8 +48,10 @@
         <option value = "six-months">Six Months</option>
         <option value = "one-year">One Year</option>
       </select>
-      <div class="col-md-12 col-lg-9 text-center">
-        <div class="ct-chart" id="my-chart"></div>
+      <div class="col-md-12 col-lg-9 text-center" style="position: relative">
+        <div class="ct-chart" id="my-chart">
+            <div class = "watermark" style = "position: absolute; top: 107px; left: 118px; color: grey; opacity: 0.4; font-size: 100px">No data available</div>
+        </div>
       </div>
       <div class="col-md-12 col-lg-3 text-center d-flex flex-column justify-content-around">
         <h3 class="display-4 mt-3 mt-lg-5" id="fitness-indicator" style="color: red">Fitness</h3>
