--- a/public/html/landing.html
+++ b/public/html/landing.html
@@ -59,7 +59,14 @@
          $('#navbar').addClass('startColor')
       }
    });
+
+   $('button').click(function(){
+
+    window.location.href = '/signup'
+   })
 });
+
+
 </script>
 
 </head>
