--- a/public/html/login.html
+++ b/public/html/login.html
@@ -64,14 +64,11 @@
                     <label for="password" class="control-label">password</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="password" id="password" placeholder="password" />
+                        <input type="password" class="form-control" name="password" id="password" placeholder="password" />
                     </div>
                 </div>
         
                 <button type="submit" id='submit' class="btn btn-primary">Submit</button>
-
-
-
 
             </form>
 
