--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -14,7 +14,10 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <link rel='stylesheet' src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/css/bootstrapValidator.min.css'>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.min.js'>
+    </script>
     <script src='../javascript/signup.js'></script>
 
 </head>
@@ -52,12 +55,12 @@
         </div>
         <div class='row justify-content-center'>
 
-            <form class="" method="post" action="#" style='width:50%'>
+            <form class="test" method="post" action="/api/newUser" style='width:50%'>
                 <div class="form-group">
                     <label for="first_name" class="control-label">First Name</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="first_name" id="first_name" placeholder="First Name" />
+                        <input type="text" class="form-control" name="first_name" id="first_name" placeholder="First Name" required />
                     </div>
                 </div>
                 <div class='form-group'>
@@ -65,7 +68,7 @@
                     <label for="last_name" class="control-label">Last Name</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Last Name" />
+                        <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Last Name" required />
                     </div>
                 </div>
 
@@ -73,14 +76,14 @@
                     <label for="email" class="control-label">Email</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="email" id="email" placeholder="Email" />
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Email" required/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="control-label">password</label>
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                        <input type="text" class="form-control" name="password" id="password" placeholder="password" />
+                        <input type="password" class="form-control" name="password" id="password" placeholder="password" required/>
                     </div>
                 </div>
         
@@ -88,8 +91,8 @@
 
 
 
-
             </form>
+         
 
         </div>
     </div>
