--- a/public/html/log.html
+++ b/public/html/log.html
@@ -19,33 +19,44 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh3IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 
 
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-            <a class="navbar-brand" href="/">Logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+<header>
+    <nav id ='navbar' class="navbar navbar-expand-md fixed-top navbar-light" >
+        <div class='container'>
+            <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/log">Log a Workout</a>
-                    <a class="nav-item nav-link" href="/view">View Workouts</a>
-                    <a class="nav-item nav-link" href="/sync">Sync</a>
-                </div>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/settings">Settings</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto" >
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/log" style='color:rgb(33, 83, 116)'>Log a Workout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/view" style='color:rgb(33, 83, 116)'>View Workouts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sync" style='color:rgb(33, 83, 116)'>Sync</a>
+                    </li>
 
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<br><br><br><br>
     <div class='container-fluid'>
-        <div class='row justify-content-center' style='padding: 50px 0 0 0; background-color: rgb(33, 83, 116)'>
+        <div class='row justify-content-center' style='padding: 25px 0 25px 0; background-color: rgb(33, 83, 116)'>
             <h2 style='color:white'>Log a Workout</h2>
         </div>
         <div class='row justify-content-center'>
@@ -57,6 +68,17 @@
 
                             <thead>
                             </thead>
+                            <style>
+                                .bodyRow {
+                                    text-align: center;
+                                }
+
+                                .table td{
+                                    padding-right: 150px;
+                                    padding-left: 150px;
+                                
+                                }
+                            </style>
 
                             <tbody>
                                 <tr class="bodyRow">
@@ -99,14 +121,35 @@
                                 <tr class="bodyRow">
                                     <td colspan="4">
                                         <h2> RPE </h2>
-                                        <input type="text" class="formControl" id="rpe" placeholder="input RPE (1 - 10)">
+                                        <form id="rpe-form">
+                                            <input type="range" list="list" class="formControl" id="rpe"
+                                                min=1 max=10 onchange="updateTextInput(this.value);">
+                                        </form>
+                                        <input type="text" id="textInput" value="">
+                                        <datalist id="list">
+                                            <option value="1" label="1">
+                                            <option value="2" label="2">
+                                            <option value="3" label="3">
+                                            <option value="4" label="4">
+                                            <option value="5" label="5">
+                                            <option value="6" label="6">
+                                            <option value="7" label="7">
+                                            <option value="8" label="8">
+                                            <option value="9" label="9">
+                                            <option value="10" label="10">
+                                        </datalist>
                                     </td>
                                 </tr>
                                 <td>
-                                    <button class="btn btn-primary" id="btn">LOG</button>
+                                    <button class="btn btn-primary" type="submit" id="btn">LOG</button>
                                     <a href="view" class="btn btn-primary">Finished with LOG</a>
                                 </td>
 
+                                <script>
+                                    function updateTextInput(val) {
+                                        document.getElementById('textInput').value = val;
+                                    }
+                                </script>
 
 
 
@@ -118,6 +161,7 @@
             </div>
         </div>
 
+        <script src="javascript/log.js"></script>
         <script src="javascript/law.js" type="text/javascript"></script>
 
 </body>
