--- a/public/html/log.html
+++ b/public/html/log.html
@@ -26,10 +26,9 @@
 
 <body>
 
-<header>
     <nav id ='navbar' class="navbar navbar-expand-md fixed-top navbar-light" >
         <div class='container'>
-            <a class="navbar-brand" href="/" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
+            <a class="navbar-brand" href="/homepage" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,10 +36,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto" >
                     <li class="nav-item active">
-                        <a class="nav-link" href="/" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/homepage" style='color:rgb(33, 83, 116)'>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/log" style='color:rgb(33, 83, 116)'>Log a Workout</a>
+                        <a class="nav-link" href="/log" style='color:rgb(33, 83, 116)'>Log a WorkOut</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/view" style='color:rgb(33, 83, 116)'>View Workouts</a>
@@ -53,7 +52,6 @@
             </div>
         </div>
     </nav>
-</header>
 <br><br><br><br>
     <div class='container-fluid'>
         <div class='row justify-content-center' style='padding: 25px 0 25px 0; background-color: rgb(33, 83, 116)'>
