--- a/public/html/log.html
+++ b/public/html/log.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <nav id ='navbar' class="navbar navbar-expand-md fixed-top navbar-light" >
+    <nav id ='navbar' class="navbar navbar-expand-md navbar-light" >
         <div class='container'>
             <a class="navbar-brand" href="/homepage" style='font-size : 40px; color:rgb(33, 83, 116)'>Ascent</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -52,7 +52,7 @@
             </div>
         </div>
     </nav>
-<br><br><br><br>
+
     <div class='container-fluid'>
         <div class='row justify-content-center' style='padding: 25px 0 25px 0; background-color: rgb(33, 83, 116)'>
             <h2 style='color:white'>Log a Workout</h2>
