--- a/public/html/log.html
+++ b/public/html/log.html
@@ -83,12 +83,12 @@
                                     <td colspan="4">
                                         <h2> category</h2>
                                         <select id="category" type="text">
-                                            <option>Crossfit</option>
-                                            <option>Hike</option>
-                                            <option>Ride</option>
-                                            <option>Run</option>
-                                            <option>Swim</option>
-                                            <option>Walk</option>
+                                            <option>crossfit</option>
+                                            <option>hike</option>
+                                            <option>ride</option>
+                                            <option>run</option>
+                                            <option>swim</option>
+                                            <option>walk</option>
                                         </select>
                                     </td>
                                 </tr>
