--- a/public/html/redirect_success.html
+++ b/public/html/redirect_success.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class = 'container'>
-        <div class= 'row text-center'>
+        <div class= 'row text-center' style = 'margin-top:100px'>
             Syncing now!
         </div>
     </div>
