logins and security'

--- a/public/html/log.html
+++ b/public/html/log.html
@@ -17,8 +17,7 @@
         crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh3IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 
 
@@ -47,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/sync" style='color:rgb(33, 83, 116)'>Sync</a>
                     </li>
+                    <li class="nav-item">
+                            <a id = 'logout' href='#logout' class="nav-link" style='color:rgb(33, 83, 116)'>Logout</a>
+                        </li>
 
                 </ul>
             </div>
