--- a/public/html/sync.html
+++ b/public/html/sync.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/view" style='color:rgb(33, 83, 116)'>View Workouts</a>
                     </li>
+                    <li class="nav-item">
+                            <a id = 'logout' href='#logout' class="nav-link" style='color:rgb(33, 83, 116)'>Logout</a>
+                        </li>
 
                 </ul>
             </div>
