--- a/public/html/index.html
+++ b/public/html/index.html
@@ -66,6 +66,9 @@
                       <li class="nav-item">
                           <a class="nav-link" href="/sync" style='color:rgb(33, 83, 116)'>Sync</a>
                       </li>
+                      <li class="nav-item">
+                          <a id = 'logout' href='#logout' class="nav-link" style='color:rgb(33, 83, 116)'>Logout</a>
+                      </li>
                   </ul>
               </div>
           </div>
